[package]
name = "dirty30-rs"
author = "Chris Collazo"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
fastrand = "1.8.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
